--- a/styles/style.css
+++ b/styles/style.css
@@ -1,76 +1,70 @@
 @font-face {
-    font-family: "Outfit";
-    src: url('../font/Outfit-VariableFont_wght.ttf');
+  font-family: "Outfit";
+  src: url("../font/Outfit-VariableFont_wght.ttf");
 }
-body{
-    font-family: "Outfit";
+body {
+  font-family: "Outfit";
 }
-.fondo{
-    background-color: #F0F0F0;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+.fondo {
+  background-color: #f0f0f0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sub-fondo {
+  background-color: #d5e1ef;
+  width: 90%;
+  height: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 15px 20px 10px rgb(217, 217, 217);
+}
+.contenedor {
+  background-color: white;
+  width: 280px;
+  height: 440px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 270px 65px 65px;
+  justify-items: center;
+}
+img {
+  border-radius: 10px;
+  margin-top: 14px;
+}
+.titulo {
+  font-weight: bold;
+  margin-top: 12px;
+  font-size: 20px;
+}
+p {
+  text-align: center;
+}
+.contenido {
+  margin-top: 5px;
+  color: #bdc1c4;
+  font-size: 15px;
+}
+span {
+  letter-spacing: -1px;
+}
+@media (max-width: 375px) {
+  .sub-fondo {
+    background-color: #d5e1ef;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-  
-}
-.sub-fondo{
-    background-color: #D5E1EF;
-    width: 90%;
-    height: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-        box-shadow: 0px 15px 20px 10px rgb(217, 217, 217);
-        
-}
-.contenedor{
-    background-color: white;
-    width: 280px;
-    height: 440px;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 270px 65px 65px;
-    justify-items   : center;
-    
-
-}
-img{
-    border-radius: 10px;
-    margin-top: 14px;
-}
-.titulo{
-    font-weight: bold;
-    margin-top: 12px;
-    font-size: 20px;
-   
-}
-p{
-    text-align: center;
-}
-.contenido {
-    margin-top: 5px;
-    color: #BDC1C4;
-    font-size: 15px;
-}
-span{
-    letter-spacing: -1px;
-}
-@media (max-width: 375px ) {
-    .sub-fondo{
-        background-color: #D5E1EF;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-            box-shadow: 0px 15px 20px 10px rgb(217, 217, 217);
-            
-    }
+    box-shadow: 0px 15px 20px 10px rgb(217, 217, 217);
+  }
 }
